--- a/source/css/styles-m.css
+++ b/source/css/styles-m.css
@@ -15652,6 +15652,7 @@ h6 {
 .bg-stripes {
   pointer-events: none;
   position: absolute;
+  overflow-x: clip;
   top: 0;
   left: 0;
   width: 100vw;
